[package]
name = "toy_xcb"
version = "0.2.0-beta.0"
authors = ["Remi THEBAULT <remi.thebault@gmail.com>"]
license = "MIT"
edition = "2018"
description = "A toy library to examplify the usage of rust-xcb and xkbcommon-rs"

[package.metadata.docs.rs]
all-features = true

[dependencies]
xcb = { version = "1.0.0-beta", features = ["xlib_xcb", "xkb"] }
xkbcommon = { version = "0.5.0-beta", features = ["x11"] }
bitflags = "1.3.2"

[[example]]
name = "basic_window"
